# TLE9879-BLDC-Shield

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  keywords.txt  library.json  library.properties
.github/workflows/: build-check.yml  compile_examples.yml  platformio_ci.yml
examples/bldc_shield_blinky_test/: bldc_shield_blinky_test.ino
examples/bldc_shield_multiple_motor_test/: bldc_shield_multiple_motor_test.ino
examples/bldc_shield_single_motor_test/: bldc_shield_single_motor_test.ino
examples/exampleA/: exampleA.ino
src/: Board.cpp  TLE9879_Group.cpp  TLE9879_Group.h  library-ino.cpp  library-ino.h
src/ard-pal/: arduino-pal.c  arduino-pal.h
src/utils/: utility.cpp  utility.h
test/: CMakeLists.txt  test_library-ino.cpp  test_library.cpp
test/fakes/: fff.h
utility/: Board.cpp
